--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+.dev.vars
+
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
